@@ -71,6 +71,10 @@ Task 137959 (Refactor PreferencesManager) removed redundant plugin class
 - Added "All Objects" to alias properties.
 - Use the last directory that a file was imported from when importing 
   additional files for binary fields.
+  
+1757076: (DATE column seen as TIMESTAMP, update in editable mode fails) Changed
+the default of "Read Date as Timestamp" to false.  This setting breaks editing
+dates on Derby.
 
 1743720: (Save settings immediately, not only when closing SQuirreL).  Now there
 is a setting in Global Preferences to "Save Preferences Immediately" (Default 
